--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream puma {
 
 server {
   listen 80 default_server deferred;
-  # server_name *.snmmaurya.sg;
+  # server_name example.com;
 
   root /home/snmspace/apps/snmmaurya/current/public;
   access_log /home/snmspace/apps/snmmaurya/current/log/nginx.access.log;
@@ -16,7 +16,7 @@ server {
     add_header Cache-Control public;
   }
 
-  try_files $uri $uri @puma;
+  try_files $uri/index.html $uri @puma;
   location @puma {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
