--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream puma {
 
 server {
   listen 80 default_server deferred;
-  # server_name example.com;
+  server_name www.snmmaurya.com snmmaurya.com;
 
   root /home/snmspace/apps/snmmaurya/current/public;
   access_log /home/snmspace/apps/snmmaurya/current/log/nginx.access.log;
