non www to www.snmmaurya.com

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,8 @@ upstream puma {
 
 server {
   listen 80 default_server deferred;
-  server_name www.snmmaurya.com snmmaurya.com;
+  server_name snmmaurya.com;
+  return 301 $scheme://www.snmmaurya.com$request_uri;
 
   root /home/snmspace/apps/snmmaurya/current/public;
   access_log /home/snmspace/apps/snmmaurya/current/log/nginx.access.log;
