--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,8 +4,7 @@ upstream puma {
 
 server {
   listen 80 default_server deferred;
-  server_name snmmaurya.com;
-  return 301 $scheme://www.snmmaurya.com$request_uri;
+  server_name snmmaurya.com www.snmmaurya.com;
 
   root /home/snmspace/apps/snmmaurya/current/public;
   access_log /home/snmspace/apps/snmmaurya/current/log/nginx.access.log;
